syntax = "proto3";

package github.com.krus210.balun_microservices.protobuf.users.v1.proto;

import "buf/validate/validate.proto";

option go_package = "pkg/gen/proto;proto_v1";

// UsersService - профили пользователей и поиск.
service UsersService {
  // CreateProfile - Создание профиля пользователя
  rpc CreateProfile(CreateProfileRequest) returns (CreateProfileResponse) {}
  // UpdateProfile - Обновление профиля пользователя
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse) {}
  // GetProfileByID - Получение профиля пользователя по ID
  rpc GetProfileByID(GetProfileByIDRequest) returns (GetProfileByIDResponse) {}
  // GetProfileByNickname - Получение профиля пользователя по никнейму
  rpc GetProfileByNickname(GetProfileByNicknameRequest) returns (GetProfileByNicknameResponse) {}
  // SearchByNickname - Поиск профиля пользователя по никнейму
  rpc SearchByNickname(SearchByNicknameRequest) returns (SearchByNicknameResponse) {}
}

message UserProfile {
  // userId - идентификатор пользователя
  int64 userId = 1;
  // nickname - никнейм пользователя
  string nickname = 2;
  // bio - биография пользователя
  optional string bio = 3;
  // avatarUrl - ссылка на аватар пользователя
  optional string avatarUrl = 4;
}

// CreateProfileRequest - запрос CreateProfile
message CreateProfileRequest {
  // userId - идентификатор пользователя
  int64 userId = 1;
  // nickname - никнейм пользователя
  string nickname = 2 [
    json_name = "nickname",
    (buf.validate.field).string = {
      pattern: "^[a-z0-9_]{3,20}$"
    }
  ];

  // bio - биография пользователя
  optional string bio = 3;
  // avatarUrl - ссылка на аватар пользователя
  optional string avatarUrl = 4;
}

// CreateProfileResponse - ответ CreateProfile
message CreateProfileResponse {
  // userProfile - профиль пользователя
  UserProfile userProfile = 1;
}

// UpdateProfileRequest - запрос UpdateProfile
message UpdateProfileRequest {
  // userId - идентификатор пользователя
  int64 userId = 1;
  // nickname - никнейм пользователя
  optional string nickname = 2 [
    json_name = "nickname",
    (buf.validate.field).string = {
      pattern: "^[a-z0-9_]{3,20}$"
    }
  ];

  // bio - биография пользователя
  optional string bio = 3;
  // avatarUrl - ссылка на аватар пользователя
  optional string avatarUrl = 4;
}

// UpdateProfileResponse - ответ UpdateProfile
message UpdateProfileResponse {
  // userProfile - профиль пользователя
  UserProfile userProfile = 1;
}

// GetProfileByIDRequest - запрос GetProfileByID
message GetProfileByIDRequest {
  // userId - идентификатор пользователя
  int64 userId = 1;
}

// GetProfileByIDResponse - ответ GetProfileByID
message GetProfileByIDResponse {
  // userProfile - профиль пользователя
  UserProfile userProfile = 1;
}

// GetProfileByNicknameRequest - запрос GetProfileByNickname
message GetProfileByNicknameRequest {
  // nickname - никнейм пользователя
  string nickname = 1;
}

// GetProfileByNicknameResponse - ответ GetProfileByNickname
message GetProfileByNicknameResponse {
  // userProfile - профиль пользователя
  UserProfile userProfile = 1;
}

// SearchByNicknameRequest - запрос SearchByNickname
message SearchByNicknameRequest {
  // query - запрос для поиска
  string query = 1;
  // limit - лимит результатов
  int64 limit = 2;
}

// SearchByNicknameResponse - ответ SearchByNickname
message SearchByNicknameResponse {
  // results - список профилей пользователей
  repeated UserProfile results = 1;
}


